# wyccc-warhammer-mod-manager

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml  一键启动管理器.cmd  一键打包发布版.cmd
backend/: __init__.py  ai_service.py  api.py  app_settings.py  changelog.py  constants.py  file_operations.py  game_data.py  game_data_patch_state.py  game_data_settings.py  games.py  json_store.py  launch_paths.py  launcher.py  load_order.py  mod_profiles.py  mod_types.py  mod_watcher.py  models.py  runtime.py  save_games.py  scanner.py  share.py  start_options.py  steam_friends.py  steam_paths.py  steamworks_bridge.py  storage.py  update_service.py  warhammer_translation.py  webview_runtime.py  wh3_db_schema.json  workshop.py  workshop_collections.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js  vitest.config.js
licenses/: RimCrow-LICENSE.txt
packaging/: update-manifest.example.json  update-manifest.json  version_info.txt
scripts/: build.py  generate_icon.py  package_release.ps1  start_desktop.ps1  windows_bootstrap.ps1
steam_runtime/: README.md  workshop_bridge.js
tests/: __init__.py  helpers.py  test_ai_service.py  test_app_settings.py  test_game_data.py  test_game_data_patch_state.py  test_launch_paths.py  test_launcher.py  test_load_order.py  test_main.py  test_mod_file_operations.py  test_mod_profiles.py  test_mod_watcher.py  test_runtime.py  test_save_games.py  test_scanner.py  test_share.py  test_start_options.py  test_steam_friends.py  test_steam_paths.py  test_steamworks_bridge.py  (+5 more)
(+105 files in other folders)
